<resources>
    <string name="app_name">UniCare</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Instellingen</string>

    <!--       Queue layout          -->
    <string name="title_people_waiting">Wachtenden voor u</string>
    <string name="estimated_time">Verwachte afspraaktijd</string>
    <string name="wait_time">Verwachte wachtttijd</string>


    <string name="home_nextappointment">Volgende afspraak</string>
    <string name="home_noappointment">Geen afspraak gevonden</string>
    <string name="home_notime">Onbekende tijd</string>
</resources>
