<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gmail.guushamm.unicare.QueueFragment">

    <TextView
        android:id="@+id/QueueTextView"
        android:text="@string/title_people_waiting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50px"
        android:paddingTop="20px"
        android:paddingBottom="20px"
        android:textColor="@color/colorPrimary"
        android:textSize="25dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/peopleWaiting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="70dp"
        android:textColor="@color/colorPrimaryText"
        />

    <TextView
        android:id="@+id/estimatedTime"
        android:text="@string/estimated_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50px"
        android:paddingTop="20px"
        android:paddingBottom="20px"
        android:textColor="@color/colorPrimary"
        android:textSize="25dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/appointmentTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="70dp"
        android:textColor="@color/colorPrimaryText"/>

    <TextView
            android:id="@+id/waitTimeText"
            android:text="@string/wait_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50px"
            android:paddingTop="20px"
            android:paddingBottom="20px"
            android:textColor="@color/colorPrimary"
            android:textSize="25dp"
            android:textAlignment="center"/>

    <TextView
            android:id="@+id/waitTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="70dp"
            android:textColor="@color/colorPrimaryText"/>
</LinearLayout>
